etc/kubernetes/manifests/dc.yaml
apiVersion: apps.openshift.io/v1
kind: DeploymentConfig
metadata:
  name: dc
spec:
  replicas: 2
  selector:
    app: santander-phpinfo-dc
  template:
    metadata:
      labels:
        app: santander-phpinfo-dc
    spec:
      containers:
        -
          args:
            - -f
            - index.php
            - -S
            - 0.0.0.0:8080
          command:
            - php
          name: php
          image: ganimedescolomar/santander-phpinfo
          ports:
            -
              containerPort: 8080
              protocol: TCP
          
          resources: {}
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          imagePullPolicy: Always
      imagePullSecrets:
        -
          name: docker-login
