etc/kubernetes/manifests/phpinfo-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: santander-phpinfo-svc
  namespace: santander-phpinfo
spec:
  selector:
    app: santander-phpinfo
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
